# orbitalterm

./: .gitignore  PRIVACY.md  README.md  index.html  llms.txt  notas  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: flatpak.yml  ppa.yml  release.yml
csharp-rdp-host/: OrbitalRdpHost.csproj  Program.cs  README.md  build.cmd
flatpak/: README.md  com.orbitalterm.OrbitalTerm.desktop  com.orbitalterm.OrbitalTerm.metainfo.xml  com.orbitalterm.OrbitalTerm.yml
packaging/copr/: README.md  orbitalterm.spec
packaging/ppa/: README.md  orbitalterm.desktop
packaging/ppa/debian/: changelog  control  copyright  rules
packaging/ppa/debian/source/: options
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  orb_rdp_bridge.c  orb_rdp_bridge.h  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  crypto.rs  lib.rs  main.rs
src-tauri/src/commands/: browser.rs  connections.rs  ftp.rs  local_fs.rs  mod.rs  sessions.rs  sftp.rs  vnc.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ftp/: mod.rs
src-tauri/src/rdp/: embedded.rs  freerdp.rs  mod.rs  windows_rdp.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/vnc/: mod.rs
src/components/BrowserPane/: index.tsx
src/components/ConnectionForm/: index.tsx
src/components/ConnectionIcons/: index.tsx
src/components/ContextMenu/: index.tsx
src/components/ExportDialog/: index.tsx
src/components/FtpBrowser/: index.tsx
src/components/MasterPasswordDialog/: index.tsx
src/components/MenuBar/: index.tsx
src/components/NotificationBar/: index.tsx
src/components/PropertiesPanel/: index.tsx
src/components/RdpPane/: index.tsx
src/components/SftpBrowser/: index.tsx
src/components/SftpDualPane/: index.tsx
src/components/Sidebar/: index.tsx
src/components/TabBar/: index.tsx
src/components/Terminal/: index.tsx
src/components/TransferPanel/: index.tsx
src/components/VncPane/: index.tsx
src/components/Welcome/: index.tsx
src/lib/: clipboard.ts  commands.ts  connErrors.ts  connIcons.ts  connIcons.tsx  folderColors.ts  overwrite.ts  sessionTransfer.ts  transferErrors.ts
src/store/: useAppStore.ts  useI18nStore.ts  useImportStore.ts  useMasterStore.ts  useNotifStore.ts  usePrefsStore.ts  useTransferStore.ts
src/styles/: global.css
src/types/: index.ts
