[package]
name = "orbitalterm"
version = "0.1.0"
description = "OrbitalTerm - Remote Connection Manager"
authors = ["OrbitalTerm"]
edition = "2021"

[lib]
name = "orbitalterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orbitalterm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
portable-pty = "0.8"
tempfile = "3"
ssh2 = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
