[package]
name = "orbitalterm"
version = "0.1.0"
description = "OrbitalTerm - Remote Connection Manager"
authors = ["OrbitalTerm"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "orbitalterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orbitalterm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"
pkg-config = "0.3"

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "native-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
portable-pty = "0.8"
tempfile = "3"
russh = "0.44"
russh-sftp = "2"
russh-keys = "0.44"
async-trait = "0.1"
tokio = { version = "1", features = ["io-util", "rt", "macros", "sync", "time", "net"] }
suppaftp = { version = "6", features = ["native-tls", "deprecated"] }
native-tls = "0.2"
des = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
roxmltree = "0.20"
aes-gcm = { version = "0.10", features = ["getrandom"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha1 = "0.10"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

# Compile image-encoding crates at full optimization even in dev builds.
# JPEG encoding in the `image` crate is ~20x slower in debug than release;
# these overrides bring dev-build RDP rendering close to release performance
# without requiring a full `cargo tauri build`.
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.zune-core]
opt-level = 3
[profile.dev.package.base64]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
